--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,32 @@
             <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     </head>
     <body>
+            <!-- HEADER -->
+    <header>
+        <nav class="container">
+            <div class="logo">ECHS JOBS</div>
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="employer.html">Post a Job</a></li>
+                <li><a href="admin.html">Admin</a></li>
+                <li><a href= "contact.html" target="_blank">Contact Us</a></li>
+              
+            </ul>
+        </nav>
+    </header>
+    <hero>
         <center>
             <h1> Contact Us</h1>
             <h2> Email: ys1234@gmail.com</h2>
             <h2> Mobile Number : 1234569872</h2>
             <h2> Main loaction : charlotte NC</h2>
         </center>
+    </hero>
+         <!-- FOOTER -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 ECHS JOBS. All rights reserved.</p>
+        </div>
+    </footer>
     </body>
 </htm>
